makefile:ephemeral environment automation
- add set of rules for ephemeral environments
- add local private.mk
- ignore configs/secrets directory from the repository.
- ignore configs/secrets when building the containers.
- add cert secrets and include venv for bonfire commands.
- add secrets deployment support at configs/secrets
  directory; all the secrets at that directory will be
  deployed.
- add support to choose the pool (default, managed-kafka,
  real-managed-kafka).
- add support to not build the image by
  EPHEMERAL_NO_BUILD=y for ephemeral-deploy rule.
- add QUAY_EXPIRATION to auto-purge the registry
  in quay.io; by default is 1 day; override
  to QUAY_EXPIRATION=never to persist the image
  into the quay.io registry.
- add support to use a different pool when reserving the
  namespace by passing or setting POOL variable.
- add ephemeral-process rule to get the processes template.
- ephemeral-build-deploy now use build_deploy.sh script to
  publish the container image.
- add the rule ephemeral-namespace-describe
- add python dependencies.
- it uses --source appsre to deploy dependencies correctly.
- add variable to request rbac access permissions.
- ignore local logs.
- add support to run dnsutil pod.
- add CLIENT_RBAC_BASE_URL support.
- add --single-replicas for default pool

Signed-off-by: Alejandro Visiedo <avisiedo@redhat.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,4 +2,7 @@ release/**
 vendor
 kafka/data
 .vscode/**
+
+# Avoid the files on this directory could be copied to the container
 configs/secrets
+*.log
