update configuration that worked locally
Signed-off-by: Alejandro Visiedo <avisiedo@redhat.com>

--- a/deployments/docker-compose.yaml
+++ b/deployments/docker-compose.yaml
@@ -3,13 +3,13 @@ services:
   postgres-content:
     image: "docker.io/library/postgres:14"
     ports:
-      - ${CONTENT_DATABASE_PORT:-5433}:5432
+      - ${CONTENT_DATABASE_PORT:-5432}:5432
     environment:
       POSTGRES_USER: ${CONTENT_DATABASE_USER:-content}
       POSTGRES_PASSWORD: ${CONTENT_DATABASE_PASSWORD:-content}
       POSTGRES_DB: ${CONTENT_DATABASE_NAME:-content}
-      POSTGRES_INITDB_ARGS: '--auth-host=scram-sha-256'
-      POSTGRES_HOST_AUTH_METHOD: 'scram-sha-256'
+      # POSTGRES_INITDB_ARGS: '--auth-host=scram-sha-256'
+      # POSTGRES_HOST_AUTH_METHOD: 'scram-sha-256'
     volumes:
       - ${CONTENT_DATABASE_NAME:-content}:/var/lib/postgresql/data/
     healthcheck:
@@ -20,13 +20,15 @@ services:
 
   zookeeper:
     image: localhost/kafka:latest
+    build:
+      dockerfile: kafka/Dockerfile
+      context: ..
     command: /opt/kafka/scripts/zookeeper-entrypoint.sh
     ports:
       - "8778:8778"
-      - "9092:9092"
       - "2181:2181"
     networks:
-        - kafka
+      - kafka
     environment:
       ZOOKEEPER_OPTS: "-Dzookeeper.4lw.commands.whitelist=*"
       ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT}
@@ -41,7 +43,12 @@ services:
       start_period: 3s
 
   kafka:
+    depends_on:
+      - zookeeper
     image: localhost/kafka:latest
+    build:
+      dockerfile: ./kafka/Dockerfile
+      context: ..
     command: /opt/kafka/scripts/kafka-entrypoint.sh
     networks:
       - kafka
@@ -51,14 +58,19 @@ services:
       - ${KAFKA_DATA_DIR}:/tmp/zookeeper:z
       - ${KAFKA_CONFIG_DIR}:/tmp/config:z
     environment:
+      ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_EXTERNAL_HOSTNAME: zookeeper
+      ZOOKEEPER_HOST: zookeeper
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
+      # KAFKA_ADVERTISED_LISTENERS: "PLAINTEXT://localhost:9092"
       ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT}
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OPTS: '-javaagent:/usr/jolokia/agents/jolokia-jvm.jar=host=0.0.0.0'
+      # KAFKA_OPTS: '-javaagent:/usr/jolokia/agents/jolokia-jvm.jar=host=0.0.0.0'
       KAFKA_TOPICS: "${KAFKA_TOPICS}"
+    ports:
+      - 9092:9092
 
 networks:
   kafka: {}
